--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,9 +14,15 @@
         <table border="1" class="table table-striped table-responsive-md">
             <thead>
                 <tr>
-                    <th>First name</th>
-                    <th>Last name</th>
-                    <th>Email</th>
+                    <th>
+                        <a th:href="@{|/page/${currentPage}?sortField=firstName&sortDir=${reverseSortDir}|}">First name</a>
+                    </th>
+                    <th>
+                        <a th:href="@{|/page/${currentPage}?sortField=lastName&sortDir=${reverseSortDir}|}">Last name</a>
+                    </th>
+                    <th>
+                        <a th:href="@{|/page/${currentPage}?sortField=email&sortDir=${reverseSortDir}|}">Email</a>
+                    </th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -36,24 +42,40 @@
         </table>
 
         <div th:if="${totalPages > 1}">
-            <div class="row col-sm-10">
+            <div class="row col-sm-12">
+
                 <div class="col-sm-2">
                     Total Rows: [[${totalItems}]]
                 </div>
-                <div class="col-sm-2">
-                    <span th:each="i : ${#numbers.sequence(1, totalPages)}">
-                        <a th:if="${currentPage != i}" th:href="@{|/page/${i}|}">[[${i}]]</a>
+
+                <div class="col-sm-1">
+                    <a th:if="${currentPage > 1}" th:href="@{|/page/1?sortField=${sortField}&sortDir=${sortDir}|}">First</a>
+                    <span th:unless="${currentPage > 1}">First</span>
+                </div>
+
+                <div class="col-sm-1">
+                    <a th:if="${currentPage > 1}" th:href="@{|/page/${currentPage - 1}?sortField=${sortField}&sortDir=${sortDir}|}">Back</a>
+                    <span th:unless="${currentPage > 1}">Back</span>
+                </div>
+
+                <div class="col-sm-2"  th:with="startPage = ${currentPage + visiblePages > totalPages} ? ${totalPages - visiblePages + 1} : ${currentPage},
+                                                endPage = ${currentPage + visiblePages > totalPages} ? ${totalPages} : ${currentPage + visiblePages - 1}">
+                    <span th:each="i : ${#numbers.sequence(startPage, endPage)}">
+                        <a th:if="${currentPage != i}" th:href="@{|/page/${i}?sortField=${sortField}&sortDir=${sortDir}|}">[[${i}]]</a>
                         <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
                     </span>
                 </div>
+
                 <div class="col-sm-1">
-                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${currentPage + 1}|}">Next</a>
+                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${currentPage + 1}?sortField=${sortField}&sortDir=${sortDir}|}">Next</a>
                     <span th:unless="${currentPage < totalPages}">Next</span>
                 </div>
+
                 <div class="col-sm-1">
-                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${totalPages}|}">Last</a>
+                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${totalPages}?sortField=${sortField}&sortDir=${sortDir}|}">Last</a>
                     <span th:unless="${currentPage < totalPages}">Last</span>
                 </div>
+
             </div>
         </div>
     </div>
