--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,18 +10,33 @@
 <body>
     <div class="container my-2">
         <h1>Employee List</h1>
-        <a th:href="@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee </a>
+        <div class="container py-2">
+            <div class="row">
+                <div class="col-xs-12 col-md-8 px-0">
+                    <a th:href="@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee </a>
+                </div>
+                <div class="col-xs-12 col-md-4 px-0">
+                    <form th:action="@{/page/1}" class="input-group">
+                        <input type="text" th:value="${keyword}" name="keyword" required
+                               class="form-control rounded" placeholder="Search..." aria-label="Search" aria-describedby="search-addon" />
+                        <input type="submit" value="Search" class="btn btn-primary mx-1">
+                        <a th:if="${keyword != null}" th:href="@{/}" class="btn btn-secondary">Clear</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+
         <table border="1" class="table table-striped table-responsive-md">
             <thead>
                 <tr>
                     <th>
-                        <a th:href="@{|/page/${currentPage}?sortField=firstName&sortDir=${reverseSortDir}|}">First name</a>
+                        <a th:href="@{|/page/${currentPage}?sortField=firstName&sortDir=${reverseSortDir}&keyword=${keyword != null ? keyword : ''}|}">First name</a>
                     </th>
                     <th>
-                        <a th:href="@{|/page/${currentPage}?sortField=lastName&sortDir=${reverseSortDir}|}">Last name</a>
+                        <a th:href="@{|/page/${currentPage}?sortField=lastName&sortDir=${reverseSortDir}&keyword=${keyword != null ? keyword : ''}|}">Last name</a>
                     </th>
                     <th>
-                        <a th:href="@{|/page/${currentPage}?sortField=email&sortDir=${reverseSortDir}|}">Email</a>
+                        <a th:href="@{|/page/${currentPage}?sortField=email&sortDir=${reverseSortDir}&keyword=${keyword != null ? keyword : ''}|}">Email</a>
                     </th>
                     <th>Actions</th>
                 </tr>
@@ -49,30 +64,29 @@
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage > 1}" th:href="@{|/page/1?sortField=${sortField}&sortDir=${sortDir}|}">First</a>
+                    <a th:if="${currentPage > 1}" th:href="@{|/page/1?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">First</a>
                     <span th:unless="${currentPage > 1}">First</span>
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage > 1}" th:href="@{|/page/${currentPage - 1}?sortField=${sortField}&sortDir=${sortDir}|}">Back</a>
-                    <span th:unless="${currentPage > 1}">Back</span>
+                    <a th:if="${currentPage > 1}" th:href="@{|/page/${currentPage - 1}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">Previous</a>
+                    <span th:unless="${currentPage > 1}">Previous</span>
                 </div>
 
-                <div class="col-sm-2"  th:with="startPage = ${currentPage + visiblePages > totalPages} ? ${totalPages - visiblePages + 1} : ${currentPage},
-                                                endPage = ${currentPage + visiblePages > totalPages} ? ${totalPages} : ${currentPage + visiblePages - 1}">
-                    <span th:each="i : ${#numbers.sequence(startPage, endPage)}">
-                        <a th:if="${currentPage != i}" th:href="@{|/page/${i}?sortField=${sortField}&sortDir=${sortDir}|}">[[${i}]]</a>
+                <div class="col-sm-2">
+                    <span th:each="i : ${#numbers.sequence(1, totalPages)}">
+                        <a th:if="${currentPage != i}" th:href="@{|/page/${i}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">[[${i}]]</a>
                         <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
                     </span>
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${currentPage + 1}?sortField=${sortField}&sortDir=${sortDir}|}">Next</a>
+                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${currentPage + 1}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">Next</a>
                     <span th:unless="${currentPage < totalPages}">Next</span>
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${totalPages}?sortField=${sortField}&sortDir=${sortDir}|}">Last</a>
+                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${totalPages}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">Last</a>
                     <span th:unless="${currentPage < totalPages}">Last</span>
                 </div>
 
