feat: Implement upload image method for Empoyee

--- a/src/main/resources/templates/employee_form.html
+++ b/src/main/resources/templates/employee_form.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Employee Management System</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-          crossorigin="anonymous">
-</head>
+<head th:replace="header :: html_head"></head>
 <body>
     <div class="container">
         <h1>Employee Management System</h1>
         <hr/>
-        <h2>Save Employee</h2>
-        <form action="#" th:action="@{/saveEmloyee}" th:object="${employee}" method="POST">
+        <h2>Employee Form</h2>
+        <form action="#" th:action="@{/saveEmloyee}" th:object="${employee}" method="POST" enctype="multipart/form-data">
+            <input type="hidden" th:field="*{id}">
             <input type="text" th:field="*{firstName}" placeholder="Enter First Name" class="form-control mb-4 col-4">
             <input type="text" th:field="*{lastName}" placeholder="Enter Last Name" class="form-control mb-4 col-4">
             <input type="text" th:field="*{email}" placeholder="Enter Email" class="form-control mb-4 col-4">
+            <p>
+                <label>Employee Image: </label>
+                <input type="file" name="imageFile" id="imageFile" accept="image/jpeg, image/png">
+                <br/>
+                <img src="" id="thumbnail" width="150" alt="Image Preview" />
+            </p>
             <input type="submit" class="btn btn-info col-2" value="Save">
         </form>
 
@@ -23,5 +24,7 @@
 
         <a th:href="@{/}">Back to Employee List</a>
     </div>
+
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 </body>
 </html>
