--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Employee Management System</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-          crossorigin="anonymous">
-</head>
+<head th:replace="header :: html_head"></head>
 <body>
     <div class="container my-2">
         <h1>Employee List</h1>
@@ -30,15 +24,18 @@
             <thead>
                 <tr>
                     <th>
-                        <a th:href="@{|/page/${currentPage}?sortField=firstName&sortDir=${reverseSortDir}&keyword=${keyword != null ? keyword : ''}|}">First name</a>
+                        <a th:href="@{|/page/${currentPage}?sortField=firstName&sortDir=${reverseSortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">First name</a>
                     </th>
                     <th>
-                        <a th:href="@{|/page/${currentPage}?sortField=lastName&sortDir=${reverseSortDir}&keyword=${keyword != null ? keyword : ''}|}">Last name</a>
+                        <a th:href="@{|/page/${currentPage}?sortField=lastName&sortDir=${reverseSortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">Last name</a>
                     </th>
                     <th>
-                        <a th:href="@{|/page/${currentPage}?sortField=email&sortDir=${reverseSortDir}&keyword=${keyword != null ? keyword : ''}|}">Email</a>
+                        <a th:href="@{|/page/${currentPage}?sortField=email&sortDir=${reverseSortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">Email</a>
                     </th>
-                    <th>Actions</th>
+                    <th class="text-center">
+                        Image
+                    </th>
+                    <th class="text-center">Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -46,7 +43,10 @@
                     <td th:text="${employee.firstName}"></td>
                     <td th:text="${employee.lastName}"></td>
                     <td th:text="${employee.email}"></td>
-                    <td>
+                    <td class="text-center">
+                        <img th:src="@{${employee.imagePath}}" width="80"/>
+                    </td>
+                    <td class="text-center">
                         <a th:href="@{/showFormForUpdate/{id}(id = ${employee.id})}" class="btn btn-primary">Update</a>
                         <a th:href="@{/deleteEmployee/{id}(id = ${employee.id})}"
                            th:onclick="|return confirm('Are you sure you want to delete this employee id: ${employee.id}?')|"
@@ -64,29 +64,29 @@
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage > 1}" th:href="@{|/page/1?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">First</a>
+                    <a th:if="${currentPage > 1}" th:href="@{|/page/1?sortField=${sortField}&sortDir=${sortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">First</a>
                     <span th:unless="${currentPage > 1}">First</span>
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage > 1}" th:href="@{|/page/${currentPage - 1}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">Previous</a>
+                    <a th:if="${currentPage > 1}" th:href="@{|/page/${currentPage - 1}?sortField=${sortField}&sortDir=${sortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">Previous</a>
                     <span th:unless="${currentPage > 1}">Previous</span>
                 </div>
 
                 <div class="col-sm-2">
                     <span th:each="i : ${#numbers.sequence(1, totalPages)}">
-                        <a th:if="${currentPage != i}" th:href="@{|/page/${i}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">[[${i}]]</a>
+                        <a th:if="${currentPage != i}" th:href="@{|/page/${i}?sortField=${sortField}&sortDir=${sortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">[[${i}]]</a>
                         <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
                     </span>
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${currentPage + 1}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">Next</a>
+                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${currentPage + 1}?sortField=${sortField}&sortDir=${sortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">Next</a>
                     <span th:unless="${currentPage < totalPages}">Next</span>
                 </div>
 
                 <div class="col-sm-1">
-                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${totalPages}?sortField=${sortField}&sortDir=${sortDir}&keyword=${keyword != null ? keyword : ''}|}">Last</a>
+                    <a th:if="${currentPage < totalPages}" th:href="@{|/page/${totalPages}?sortField=${sortField}&sortDir=${sortDir}${keyword != null ? '&keyword=' + keyword : ''}|}">Last</a>
                     <span th:unless="${currentPage < totalPages}">Last</span>
                 </div>
 
