fix: No image upload

--- a/src/main/resources/templates/employee_form.html
+++ b/src/main/resources/templates/employee_form.html
@@ -15,7 +15,7 @@
                 <label>Employee Image: </label>
                 <input type="file" name="imageFile" id="imageFile" accept="image/jpeg, image/png">
                 <br/>
-                <img src="" id="thumbnail" width="150" alt="Image Preview" />
+                <img th:src="@{*{imagePath}}" id="thumbnail" width="150" alt="Image Preview" />
             </p>
             <input type="submit" class="btn btn-info col-2" value="Save">
         </form>
